ttrss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tt-rss
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: rss.rytis.be
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tt-rss
            port:
              number: 8080
